# diet_generator

./: .gitignore  .travis.yml  README.md  pom.xml  wedki_jmeter_tests.jmx
catch2/: CMakeLists.txt  README.md
catch2/tests/: test_lib.cpp
config/: database.yml
jmeter_dbunit_tests/dbunit_hibernate_started/: README.md
jmeter_dbunit_tests/unittests_mocks_dbunit_final/: pom.xml
karma_jasmine/: package.json
karma_jasmine/test/: indexSpec.js
mocks_selenium/: README.md
new_version/: pom.xml  wedki_jmeter_tests.jmx
new_version/safe-copy/food/: CalorieCalculator.java  ReadyMeal.java  ReadyMealDetails.java
new_version/src/main/resources/: application.properties
new_version/upload-dir/: ingredients.xml
old-files/dbunit_hibernate_started/: pom.xml
old-files/karma_jasmine/js/: plugin.js
old-files/unittests_mocks_dbunit_final/: pom.xml
old-files/unittests_mocks_dbunit_final/scripts/: client.sh
old/catch2/src/: rpn.cpp  rpn.hpp
old/karma_jasmine/test/: indexSpec.js
old/spring_hibernate_angular/: pom.xml
old_files/catch2/tests/: test_lib.cpp
old_files/karma_jasmine/: karma.conf.js  package-lock.json
rest_mocks_selenium/: pom.xml
rest_mocks_selenium/scripts/: server.sh
safe-copy/: Account.java  Rods.java  Role.java  User.java
safe-copy/food/: FoodIngredient.java
spring_hibernate_angular/: pom.xml
src/main/java/: App.java
src/main/resources/: application.properties  beans.xml  messages.properties
src/test/java/: AppTest.java
src/test/resources/: addPersonData.xml  dataSet_.dtd  fullData.xml
upload-dir/: ingredients.xml
(+281 files in other folders)
